= 2.2.8 =
* Some timezone shows difference of day in a date for custom date format - FIXED
* Old Elementor image setting shows error - FIXED
* File limit not applied to GD > Post Meta when showing files - FIXED
* Re-order post images don't detach previous featured post thumbnail - FIXED

= 2.2.7 =
* SEO title conflicts with SEOPress - FIXED
* GD > Loop option added to choose Elementor skin - ADDED
* Category field shows legacy radio input to set default category - FIXED
* Non GD pages shows blank meta description tag - FIXED
* GD > Post Badge don't shows values in site date time format - FIXED
* Add listing file upload is not working on iOS Safari browser - FIXED
* No way to undo Classifieds/Real-Estate Sold status - FIXED
* Fast AJAX feature to speedup AJAX requests - ADDED
* Import address geocode not using set language - FIXED
* Better Messages plugin can cause PHP error if buddypress not installed - FIXED

= 2.2.6 =
* Float value parsing shows comma with pl_PL locale - FIXED
* Elementor custom tag shows country name untranslated - FIXED
* GD events widgets not showing in elementor - FIXED
* Option added to hide search & near inputs in search form - ADDED
* AJAX search compatibility changes - ADDED

= 2.2.4 =
* Neighbourhood SEO variable not working on single page - FIXED
* GD Categories widget option include categories is not working for child categories - FIXED
* Prevent add/delete column for reserved fields like city, region etc - CHANGED
* Unable to disable mouse scroll zoom on map - FIXED
* Default empty badge attribute shows nothing for default category badge - FIXED
* Set address on map makes Address Line 2 blank - FIXED
* GeoDirectory Elementor widgets not showing in searches - FIXED
* Backend settings textarea options strips HTML tags - FIXED
* Imported external linked image not working for og:image - FIXED
* Missing no rating class on listing grid - FIXED
* Option added in tags field to enable spell check - CHANGED