@@ -3,6 +3,7 @@
 * Old Elementor image setting shows error - FIXED
 * File limit not applied to GD > Post Meta when showing files - FIXED
 * Re-order post images don't detach previous featured post thumbnail - FIXED
+* Schema validator shows error for Yoast SEO breadcrumb attribute - FIXED
 
 = 2.2.7 =
 * SEO title conflicts with SEOPress - FIXED
